# university-script-languages

./: README.md
Aggregate/: Aggregate.h  ConsoleReader.h  StringToFloatConventer.h  main.cpp  scripts.sh
Aggregate/Env/: Env.h  Param.h
DuckTyping/: multiple_accumulate.py  zad2 - runtime.py
cpp-helpers/: CMakeLists.txt  ExitCode.cpp  Head.cpp  Paths.cpp  Process.cpp  ShowAll.cpp  ShowSimilar.cpp  Tail.cpp
pyh4j/Py/: Graph.py
pyh4j/src/main/: GraphEntryPoint.java  Test.java
pyh4j/src/main/exceptions/: NodeExists.java  NodeNotExists.java
pyh4j/src/main/graph/: Graph.java  Node.java
pyh4j/src/main/graph/algorithms/: ConnectedNodes.java  FastestPath.java
python-oop/: view_files.py  zad1.py
scripts/: save.sh  showBiggestFiles.sh
